[gd_scene load_steps=53 format=3 uid="uid://brpnuk26s7usk"]

[ext_resource type="Script" path="res://Actors/Player/player.gd" id="1_nb1jr"]
[ext_resource type="Texture2D" uid="uid://bnmjla5xx5o14" path="res://Sprites/Mario/die.png" id="2_2mxyc"]
[ext_resource type="Texture2D" uid="uid://c2vo86gq72gu6" path="res://Sprites/Mario/Small/idle.png" id="3_57mye"]
[ext_resource type="Script" path="res://Actors/Player/player_camera.gd" id="3_kv74t"]
[ext_resource type="Texture2D" uid="uid://clseqfs6lcj64" path="res://Sprites/Mario/Small/jump.png" id="4_qq2ta"]
[ext_resource type="Texture2D" uid="uid://cps8gbma85jc8" path="res://Sprites/Mario/Small/run.png" id="5_njtaa"]
[ext_resource type="Texture2D" uid="uid://ht32e1hfvaje" path="res://Sprites/Mario/Small/turn.png" id="8_7gu1f"]
[ext_resource type="Texture2D" uid="uid://vwecjbjqgu06" path="res://Sprites/Mario/Big/run.png" id="10_lesy4"]
[ext_resource type="AudioStream" uid="uid://bu5dy877jvhqo" path="res://Sounds/sfx/Jump.wav" id="10_pcei6"]
[ext_resource type="Texture2D" uid="uid://c51di0pxgdmhm" path="res://Sprites/Mario/Big/crouch.png" id="10_s7aro"]
[ext_resource type="Texture2D" uid="uid://cx8s4gmysq1wd" path="res://Sprites/Mario/Big/Idle.png" id="11_kmd2p"]
[ext_resource type="Texture2D" uid="uid://bijir1trjpsd5" path="res://Sprites/Mario/Big/jump.png" id="12_gfvj4"]
[ext_resource type="Texture2D" uid="uid://n4dexj17x7td" path="res://Sprites/Mario/Fire/crouch.png" id="12_mhagt"]
[ext_resource type="Texture2D" uid="uid://c5kq5yqgkajvq" path="res://Sprites/Mario/Fire/idle.png" id="13_75xw6"]
[ext_resource type="Texture2D" uid="uid://o3dshrf350hn" path="res://Sprites/Mario/Fire/jump.png" id="14_bf8yj"]
[ext_resource type="Texture2D" uid="uid://bwipnlgis72jf" path="res://Sprites/Mario/Fire/run.png" id="15_feera"]
[ext_resource type="Texture2D" uid="uid://ich6d1qetn1l" path="res://Sprites/Mario/Fire/swim.png" id="16_8pn83"]
[ext_resource type="Texture2D" uid="uid://c51uc1hfewtfm" path="res://Sprites/Mario/Big/turn.png" id="16_t1wjr"]
[ext_resource type="Texture2D" uid="uid://6dvbhfwammft" path="res://Sprites/Mario/Fire/turn.png" id="17_i0y26"]
[ext_resource type="AudioStream" uid="uid://cqprk6ffnntgb" path="res://Sounds/sfx/Item.wav" id="18_3jn03"]
[ext_resource type="AudioStream" uid="uid://cwrdvutyajf04" path="res://Sounds/sfx/Powerup.wav" id="18_h33na"]
[ext_resource type="Texture2D" uid="uid://cm2a4pa8bqssf" path="res://Sprites/Mario/Fire/vine.png" id="18_pyt6m"]
[ext_resource type="Shape2D" uid="uid://cenuak4gjcwq8" path="res://Actors/Player/small_hitbox.tres" id="19_2ixeq"]
[ext_resource type="AudioStream" uid="uid://qrtp86tegcx8" path="res://Sounds/sfx/Break.wav" id="19_21lx7"]
[ext_resource type="AudioStream" uid="uid://b0yebfvb3auvf" path="res://Sounds/sfx/1up.wav" id="19_wdwca"]
[ext_resource type="AudioStream" uid="uid://kw6dgw2sccoj" path="res://Sounds/sfx/Bump.wav" id="20_r3y5j"]
[ext_resource type="AudioStream" uid="uid://cn7u4vghy2boo" path="res://Sounds/sfx/Coin.wav" id="21_8n2fa"]
[ext_resource type="Shape2D" uid="uid://b0cei6tshf144" path="res://Actors/Player/big_hitbox.tres" id="28_yxd6y"]
[ext_resource type="Shape2D" uid="uid://cpeaeintrk81c" path="res://Actors/Player/crouch_hitbox.tres" id="29_h400n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kd14f"]
size = Vector2(12, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5jrja"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4j3ku"]
size = Vector2(16, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1rn1"]
atlas = ExtResource("5_njtaa")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv6x1"]
atlas = ExtResource("5_njtaa")
region = Rect2(18, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufry6"]
atlas = ExtResource("5_njtaa")
region = Rect2(36, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_44fed"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2mxyc")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_57mye")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qq2ta")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1rn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv6x1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufry6")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_7gu1f")
}],
"loop": true,
"name": &"turn",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_c203v"]
atlas = ExtResource("10_lesy4")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1fsv"]
atlas = ExtResource("10_lesy4")
region = Rect2(18, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_no4p2"]
atlas = ExtResource("10_lesy4")
region = Rect2(36, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mfbne"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_s7aro")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_kmd2p")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_gfvj4")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c203v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1fsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no4p2")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_t1wjr")
}],
"loop": true,
"name": &"turn",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0g4fp"]
atlas = ExtResource("15_feera")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsihh"]
atlas = ExtResource("15_feera")
region = Rect2(18, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwupb"]
atlas = ExtResource("15_feera")
region = Rect2(36, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh0iy"]
atlas = ExtResource("16_8pn83")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lgqw"]
atlas = ExtResource("16_8pn83")
region = Rect2(18, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew6ve"]
atlas = ExtResource("16_8pn83")
region = Rect2(36, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6x2u"]
atlas = ExtResource("16_8pn83")
region = Rect2(54, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wokt"]
atlas = ExtResource("16_8pn83")
region = Rect2(72, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdh4y"]
atlas = ExtResource("16_8pn83")
region = Rect2(90, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_exra3"]
atlas = ExtResource("18_pyt6m")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx8nj"]
atlas = ExtResource("18_pyt6m")
region = Rect2(18, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ka6dg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_mhagt")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_75xw6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_bf8yj")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g4fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsihh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwupb")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh0iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lgqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew6ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6x2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wokt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdh4y")
}],
"loop": true,
"name": &"swim",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_i0y26")
}],
"loop": true,
"name": &"turn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exra3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx8nj")
}],
"loop": true,
"name": &"vine",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(9, 9)
collision_mask = 66
script = ExtResource("1_nb1jr")

[node name="SmallHitbox" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, 2)
shape = ExtResource("19_2ixeq")
debug_color = Color(1, 0.0941176, 0.101961, 0.419608)

[node name="BigHitbox" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_kd14f")
debug_color = Color(0.686275, 0.654902, 0.113725, 0.419608)

[node name="CrouchHitBox" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_5jrja")
debug_color = Color(1, 0.419608, 0.803922, 0.419608)

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -800)
zoom = Vector2(0.3, 0.3)
script = ExtResource("3_kv74t")

[node name="CameraWall" type="StaticBody2D" parent="Camera2D"]
unique_name_in_owner = true
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/CameraWall"]
position = Vector2(-224, -121)
shape = SubResource("RectangleShape2D_4j3ku")

[node name="Sprites" type="Node2D" parent="."]

[node name="SpriteSmall" type="AnimatedSprite2D" parent="Sprites"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_44fed")
animation = &"idle"

[node name="SpriteBig" type="AnimatedSprite2D" parent="Sprites"]
unique_name_in_owner = true
visible = false
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_mfbne")
animation = &"idle"

[node name="SpriteFire" type="AnimatedSprite2D" parent="Sprites"]
unique_name_in_owner = true
visible = false
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_ka6dg")
animation = &"idle"

[node name="Sounds" type="Node2D" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("10_pcei6")

[node name="PowerSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("18_h33na")

[node name="BreakSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("19_21lx7")

[node name="BumpSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("20_r3y5j")

[node name="CoinSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("21_8n2fa")

[node name="ItemSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("18_3jn03")

[node name="OneupSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("19_wdwca")

[node name="Area2Ds" type="Node2D" parent="."]

[node name="SmallItemHitbox" type="Area2D" parent="Area2Ds"]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Ds/SmallItemHitbox"]
position = Vector2(0, 1.5)
shape = ExtResource("19_2ixeq")

[node name="BigItemHitbox" type="Area2D" parent="Area2Ds"]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Ds/BigItemHitbox"]
position = Vector2(0, -4.5)
shape = ExtResource("28_yxd6y")

[node name="CrouchItemHitbox" type="Area2D" parent="Area2Ds"]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Ds/CrouchItemHitbox"]
position = Vector2(0, 1.55556)
shape = ExtResource("29_h400n")

[connection signal="body_entered" from="Area2Ds/SmallItemHitbox" to="." method="_on_small_item_hitbox_body_entered"]
[connection signal="body_exited" from="Area2Ds/SmallItemHitbox" to="." method="_on_small_item_hitbox_body_exited"]
[connection signal="body_entered" from="Area2Ds/BigItemHitbox" to="." method="_on_big_item_hitbox_body_entered"]
[connection signal="body_exited" from="Area2Ds/BigItemHitbox" to="." method="_on_big_item_hitbox_body_exited"]
[connection signal="body_entered" from="Area2Ds/CrouchItemHitbox" to="." method="_on_crouch_item_hitbox_body_entered"]
[connection signal="body_exited" from="Area2Ds/CrouchItemHitbox" to="." method="_on_crouch_item_hitbox_body_exited"]
